# claude-code-lmstudio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
completions/: _cll  cll.bash
docs/reference/: architecture.md  releasing.md
packaging/homebrew/: claude-code-lmstudio.rb  claude-lms.rb
scripts/: install.sh
src/claude_code_lmstudio/: __init__.py  cli.py  proxy.py
src/claude_lms/: __init__.py  cli.py  completions.py  proxy.py
tests/: test_cli.py  test_completions.py  test_normalize.py  test_proxy.py
