[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-lmstudio"
version = "0.1.0"
description = "Run Claude Code against local models in LM Studio — fixes the 'System message must be at the beginning' chat-template error (Qwen and other strict templates)."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Willie Chalmers III" }]
keywords = [
    "claude",
    "claude-code",
    "anthropic",
    "lm-studio",
    "lmstudio",
    "qwen",
    "local-llm",
    "proxy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
cll = "claude_code_lmstudio.cli:main"
claude-code-lmstudio-proxy = "claude_code_lmstudio.proxy:main"

[project.urls]
Homepage = "https://github.com/WillieCubed/claude-code-lmstudio"
Repository = "https://github.com/WillieCubed/claude-code-lmstudio"
Issues = "https://github.com/WillieCubed/claude-code-lmstudio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_lmstudio"]

[tool.ruff]
line-length = 100
target-version = "py38"
